--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,15 +13,16 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-30 Mon 09:24]
+#+CAPTION: Clock summary at [2017-01-30 Mon 09:45]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:01* |      |      | 100.0 |
+| *Total time*                                                                | *0:21* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:01   |      |      | 100.0 |
-| Active                                                                      |        | 0:01 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:01 | 100.0 |
+| Stories                                                                     | 0:21   |      |      | 100.0 |
+| Active                                                                      |        | 0:21 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   4.8 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |  95.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -30,43 +31,44 @@
 
 Updates to sprint and product backlog.
 
-*** Edit release notes for previous sprint                            :story:
+*** COMPLETED Edit release notes for previous sprint                  :story:
+    CLOSED: [2017-01-30 Mon 09:44]
+    CLOCK: [2017-01-30 Mon 09:24]--[2017-01-30 Mon 09:44] =>  0:20
 
 Add github release notes for previous sprint.
 
-Title: Dogen v0.95.0, "Iona"
+Title: Dogen v0.96.0, "Praia das Miragens"
 
 #+begin_src markdown
+![alt text](http://static.panoramio.com/photos/large/820003.jpg)
+Praia das Miragens, Namibe, Angola. (C) Ivo Cardoso, 2007. Sourced from Panoramio.
+
 Overview
 =======
-The bulk of this sprint's work was related to a customer specific feature: support for the upsilon input format. Other smaller tasks were:
+The main theme of the sprint was infrastructural work to enable multi-language support in yarn. This was done mainly for the customer-specific upsilon model but it will be reused in a more general form to provide support for Language Agnostic Models.
 
-- the continued work on the C# frontend, which is now nearing completion. C# support is still considered experimental and the generated code has an unstable API, liable to change without notice.
-- improvements on the Windows build.
-- addition of a benchmarking framework which allows us to measure the impact of new features in code generation time.
+The only other area of interest in this sprint was the start of the work on "primitives". What was previously called "primitives" are now "built-ins", to best reflect their nature; a new meta-model concept of primitive was introduced. The idea is that users can create their own primitive types. Work on this has only started and the next sprint will provide clarity around the implementation.
 
 User visible changes
 ===============
+In this sprint, a small number of user visible changes were made:
 
-In this sprint, a number of user visible features were added:
+- **Log level is now settable**: Command line utilities no longer use the deprecated ```verbose``` parameter. Instead, ```log_level``` was introduced. It maps to the existing levels of logging in Dogen.
+- **JSON format was tidied up**: A few inconsistencies around naming of attributes in JSON were resolved. Please look at the [example models](https://github.com/DomainDrivenConsulting/dogen/tree/master/test_data/yarn.json/input) if you need to update your own models.
 
-- **Improvements to C# including collections**:  it is now possible to use  object based collections. We can now generate most C# code except generic containers.
-- **Packaging on Windows**: packaging support for Windows using WiX is now complete. As with OSX and Linux, Binaries are available from BinTray.
-- **Validation improvements**: with the new validation framework, Dogen detects a lot of errors at code generation time (such as invalid type names, attempt to instantiate abstract types, etc). More validation rules will be added over time.
-
-For more details of the work carried out this sprint, see the [sprint log](https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_95.org).
+For more details of the work carried out this sprint, see the [sprint log](https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_96.org).
 
 Next Sprint
 ========
-The next sprint will continue to focus on C#, particularly the addition of collections.
+The next sprint will continue to focus on Upsilon and C#.
 
 Binaries
 ======
 You can download experimental binaries from [Bintray](https://bintray.com/domaindrivenconsulting/Dogen) for OSX, Linux and Windows (all 64-bit):
 
-- [dogen_0.95.0_amd64-applications.deb](https://dl.bintray.com/domaindrivenconsulting/Dogen/0.95.0/dogen_0.95.0_amd64-applications.deb)
-- [dogen-0.95.0-Darwin-x86_64.dmg](https://dl.bintray.com/domaindrivenconsulting/Dogen/0.95.0/dogen-0.95.0-Darwin-x86_64.dmg)
-- [dogen-0.95.0-Windows-AMD64.msi](https://dl.bintray.com/domaindrivenconsulting/Dogen/dogen-0.95.0-Windows-AMD64.msi)
+- [dogen_0.96.0_amd64-applications.deb](https://dl.bintray.com/domaindrivenconsulting/Dogen/0.96.0/dogen_0.96.0_amd64-applications.deb)
+- [dogen-0.96.0-Darwin-x86_64.dmg](https://dl.bintray.com/domaindrivenconsulting/Dogen/0.96.0/dogen-0.96.0-Darwin-x86_64.dmg)
+- [dogen-0.96.0-Windows-AMD64.msi](https://dl.bintray.com/domaindrivenconsulting/Dogen/dogen-0.96.0-Windows-AMD64.msi)
 
 **Note**: They are produced by CI so they may not yet be ready.
 
