--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-30 Mon 12:01]
+#+CAPTION: Clock summary at [2017-01-30 Mon 13:15]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:35* |      |      | 100.0 |
+| *Total time*                                                                | *3:11* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:35   |      |      | 100.0 |
-| Active                                                                      |        | 2:35 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   0.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |  12.9 |
-| STARTED Create a new yarn type for primitives                               |        |      | 2:14 |  86.5 |
+| Stories                                                                     | 3:11   |      |      | 100.0 |
+| Active                                                                      |        | 3:11 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   0.5 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |  10.5 |
+| STARTED Create a new yarn type for primitives                               |        |      | 2:50 |  89.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -79,6 +79,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://twitter.com/MarcoCraveiro/status/820962437465866241][Tweet]]
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-30 Mon 12:39]--[2017-01-30 Mon 13:15] =>  0:36
     CLOCK: [2017-01-30 Mon 11:28]--[2017-01-30 Mon 12:01] =>  0:33
     CLOCK: [2017-01-30 Mon 10:49]--[2017-01-30 Mon 11:27] =>  0:38
     CLOCK: [2017-01-30 Mon 09:45]--[2017-01-30 Mon 10:48] =>  1:03
